# betterbutterbot

./: .env.sample  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
BetterButterBot/: main.py
Scripts/: get_tg_store.py
plugins/: welcome.py  youtube.py
